; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_nfs4_xdr_enc_readlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_nfs4_xdr_enc_readlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_rqst = type { i32, i32 }
%struct.nfs4_readlink = type { i32, i32, i32, i32, i32 }
%struct.xdr_stream = type { i32 }
%struct.compound_hdr = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpc_rqst*, i32*, %struct.nfs4_readlink*)* @nfs4_xdr_enc_readlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs4_xdr_enc_readlink(%struct.rpc_rqst* %0, i32* %1, %struct.nfs4_readlink* %2) #0 {
  %4 = alloca %struct.rpc_rqst*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.nfs4_readlink*, align 8
  %7 = alloca %struct.xdr_stream, align 4
  %8 = alloca %struct.compound_hdr, align 4
  store %struct.rpc_rqst* %0, %struct.rpc_rqst** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.nfs4_readlink* %2, %struct.nfs4_readlink** %6, align 8
  %9 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %8, i32 0, i32 0
  store i32 0, i32* %9, align 4
  %10 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %8, i32 0, i32 1
  %11 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %12 = getelementptr inbounds %struct.nfs4_readlink, %struct.nfs4_readlink* %11, i32 0, i32 4
  %13 = call i32 @nfs4_xdr_minorversion(i32* %12)
  store i32 %13, i32* %10, align 4
  %14 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %15 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %14, i32 0, i32 1
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @xdr_init_encode(%struct.xdr_stream* %7, i32* %15, i32* %16)
  %18 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %19 = call i32 @encode_compound_hdr(%struct.xdr_stream* %7, %struct.rpc_rqst* %18, %struct.compound_hdr* %8)
  %20 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %21 = getelementptr inbounds %struct.nfs4_readlink, %struct.nfs4_readlink* %20, i32 0, i32 4
  %22 = call i32 @encode_sequence(%struct.xdr_stream* %7, i32* %21, %struct.compound_hdr* %8)
  %23 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %24 = getelementptr inbounds %struct.nfs4_readlink, %struct.nfs4_readlink* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @encode_putfh(%struct.xdr_stream* %7, i32 %25, %struct.compound_hdr* %8)
  %27 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %28 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %29 = call i32 @encode_readlink(%struct.xdr_stream* %7, %struct.nfs4_readlink* %27, %struct.rpc_rqst* %28, %struct.compound_hdr* %8)
  %30 = load %struct.rpc_rqst*, %struct.rpc_rqst** %4, align 8
  %31 = getelementptr inbounds %struct.rpc_rqst, %struct.rpc_rqst* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %8, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = shl i32 %33, 2
  %35 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %36 = getelementptr inbounds %struct.nfs4_readlink, %struct.nfs4_readlink* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %39 = getelementptr inbounds %struct.nfs4_readlink, %struct.nfs4_readlink* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.nfs4_readlink*, %struct.nfs4_readlink** %6, align 8
  %42 = getelementptr inbounds %struct.nfs4_readlink, %struct.nfs4_readlink* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @xdr_inline_pages(i32* %31, i32 %34, i32 %37, i32 %40, i32 %43)
  %45 = call i32 @encode_nops(%struct.compound_hdr* %8)
  ret i32 0
}

declare dso_local i32 @nfs4_xdr_minorversion(i32*) #1

declare dso_local i32 @xdr_init_encode(%struct.xdr_stream*, i32*, i32*) #1

declare dso_local i32 @encode_compound_hdr(%struct.xdr_stream*, %struct.rpc_rqst*, %struct.compound_hdr*) #1

declare dso_local i32 @encode_sequence(%struct.xdr_stream*, i32*, %struct.compound_hdr*) #1

declare dso_local i32 @encode_putfh(%struct.xdr_stream*, i32, %struct.compound_hdr*) #1

declare dso_local i32 @encode_readlink(%struct.xdr_stream*, %struct.nfs4_readlink*, %struct.rpc_rqst*, %struct.compound_hdr*) #1

declare dso_local i32 @xdr_inline_pages(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @encode_nops(%struct.compound_hdr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
